<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:background="#445043"
    android:paddingTop="20dp"
    android:padding="20dp">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent"
        android:gravity="fill_vertical"
        android:paddingTop="20dp">

        <!--Put form controls here-->
        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedbacktitle"
            android:textSize="10pt"
            android:background="#d2ba72">
        </TextView>

        <EditText
            android:id="@+id/EditTextName"
            android:layout_height="50dp"
            android:hint="@string/feedbackname"
            android:inputType="textPersonName"
            android:layout_width="fill_parent"
            android:background="#e6f4e5"
            android:padding="10dp"
            android:textColor="#060000"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">
        </EditText>
        <EditText
            android:id="@+id/Editingredient"
            android:layout_height="50dp"
            android:hint="@string/feedbackemail"
            android:inputType="textEmailAddress"
            android:layout_width="fill_parent"
            android:background="#e6f4e5"
            android:padding="10dp"
            android:layout_marginBottom="5dp">
        </EditText>
        <Spinner
            android:id="@+id/SpinnerFeedbackType"
            android:layout_height="wrap_content"
            android:prompt="@string/feedback_type"
            android:layout_width="fill_parent"
            android:entries="@array/feedbacktypelist"
            android:background="#e6f4e5"
            android:padding="10dp">
        </Spinner>



        <EditText
            android:id="@+id/EditTextFeedbackBody"
            android:layout_height="100dp"
            android:hint="@string/feedbackbody"
            android:inputType="textMultiLine"
            android:lines="5"
            android:layout_width="fill_parent"
            android:background="#e6f4e5"
            android:layout_marginTop="5dp">
        </EditText>
        <Button
            android:id="@+id/ButtonSendFeedback"
            android:layout_height="wrap_content"
            android:text="@string/feedbackbutton"
            android:onClick="sendFeedback"
            android:layout_width="fill_parent"
            android:background="#e3dc97"
            android:layout_marginTop="5dp">
        </Button>
        <Button
            android:id="@+id/ButtonDelete"
            android:layout_height="wrap_content"
            android:text="@string/deletebutton"
            android:onClick="sendFeedback"
            android:layout_width="fill_parent"
            android:background="#e3dc97"
            android:layout_marginTop="5dp">
        </Button>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView5"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/botton" />
    </LinearLayout>
</ScrollView>