<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.healthylife.healthylife.MainActivity"
    android:background="#67adf8">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:columnCount="2"
        android:layout_centerHorizontal="true"
        android:id="@+id/gridLayout"
        android:rowCount="4"
        android:background="#3bc383">


        <Button
            android:layout_width="172dp"
            android:layout_height="118dp"
            android:text="@string/bread_button"
            android:id="@+id/bread"
            android:layout_row="0"
            android:layout_column="1"
            android:textAlignment="center"
            android:gravity="center|start"
            android:background="#64a7d0" />

        <Button
            android:layout_width="172dp"
            android:layout_height="118dp"
            android:text="@string/fruit_button"
            android:id="@+id/fruits"
            android:layout_row="1"
            android:layout_column="1"
            android:textColor="#040923"
            android:textAlignment="center"
            android:gravity="center|start"
            android:background="#e3dc97" />

        <Button
            android:layout_width="172dp"
            android:layout_height="118dp"
            android:text="@string/vegetable_button"
            android:id="@+id/vegetables"
            android:layout_row="2"
            android:layout_column="1"
            android:textAlignment="center"
            android:gravity="center|start"

            android:background="#3bc383" />


        <Button
            android:layout_width="172dp"
            android:layout_height="118dp"
            android:text="@string/soup_button"
            android:id="@+id/button"
            android:layout_row="3"
            android:layout_column="1"
            android:textAlignment="center"
            android:gravity="center|start"
            android:background="#eec04c"
            android:backgroundTintMode="screen" />

        <ImageView
            android:layout_width="172dp"
            android:layout_height="118dp"
            android:id="@+id/imageView3"
            android:layout_row="0"
            android:layout_column="0"
            android:background="@drawable/bread" />

        <ImageView
            android:layout_width="172dp"
            android:layout_height="118dp"
            android:id="@+id/imageView2"
            android:layout_row="1"
            android:layout_column="0"
            android:background="@drawable/fruits" />

        <ImageView
            android:layout_width="172dp"
            android:layout_height="118dp"
            android:id="@+id/imageView4"
            android:layout_row="2"
            android:layout_column="0"
            android:background="@drawable/vegetables" />
        <ImageView
            android:layout_width="172dp"
            android:layout_height="118dp"
            android:id="@+id/imageView"
            android:layout_row="3"
            android:layout_column="0"
            android:background="@drawable/soups" />


    </GridLayout>



</RelativeLayout>
